# paramant-relay

./: .env.example  .gitignore  .gitleaksignore  .style-denylist.example  .test-leak-check  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  ROADMAP.md  SECURITY-FIXES-2026-04-15.md  SECURITY-INCIDENTS.md  SECURITY.md  build.sh  deploy.sh  docker-compose.integrations.yml  docker-compose.server.yml  docker-compose.yml  install-pi.sh  install.sh  nginx-selfhost.conf  package-lock.json  package.json  pentest-report-2026-04-08.txt  ystemctl reload nginx"
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: pre-push
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-image.yml  csp-inline-check.yml  dispatch-parmantos.yml  docker-publish.yml  release-thunderbird-filelink.yml  sign-e2e.yml  test.yml
admin/: ADMIN.md  Dockerfile  package-lock.json  package.json  server.js
admin/lib/: account-keys.js  account-recovery.js  audit.js  billing-stub.js  cli-audit.js  cli-commands.js  cli-ratelimit.js  config-schema.js  config-store.js  developer-config.js  developer-gate.js  developer-snapshot.js  developer-tools.js  email-templates.js  pow-captcha.js  recipient-binding.js  redis.js  signup-lock.js  telemetry.js  webauthn.js
admin/public/: app.js  cli.html  cli.js  index.html  settings.html  settings.js
admin/test/: account-recovery.test.js  audit-retention.test.js  billing-stub-bypass.test.js  cli-argvalidate.test.js  cli-childenv.test.js  developer-gate.test.js  (+12 more)
chat-relay/: package.json  relay.js
crypto-wasm/: Cargo.toml  build-wasm.sh  rust-toolchain.toml  test.js
crypto-wasm/src/: lib.rs
deploy/: .env.example  deploy.sh  docker-entrypoint.sh  migrate-users-v2.mjs  nginx-paramant-live.conf  nginx-paramant-public.conf  nginx-paramant.conf  nginx-selfhost.conf  paramant-admin.py  post-install.sh  preflight.sh  prometheus-token  prometheus.yml  server-fix.sh  setup-integrations.sh  signup-fix-deploy.sh  verify-license.js
docs/: PROJECT-STATUS.md  RUNBOOK-DEPLOY-3.0.0.md  api.md  audit-readiness-checklist.md  businessmodel.md  cross-repo-coordination.md  dicom-guide.md  docker-hardening-2026-04-24.md  licensing.md  migration-bunny.md  monitoring-setup.md  ot-guide.md  parasign-open-api-spec.md  regression-watchlist.md  security-audit-2026-04.md  security.md  self-hosting.md  tno-outreach.md  wire-format-v1.md
extensions/: IMPLEMENTATION_NOTES.md  PRIVACY.md  STORE_LISTING.md
fly-relay/: Dockerfile  fly.toml  package.json  relay.js
frontend/: 404.html  _design.css  _headers  about.html  account.html  admin.html  all-systems-go.html  anti-phishing.html  apply-nav.py  architecture.html  audit-log-export.html  banken.html  blockchain.html  changelog.html  chat.html  claim.html  claim.js  co-sign.html  co-sign.js  components-parasign.css  crypto-agility.html  crypto-bridge.js  ct-log.html  ct-stats.js  dashboard.html  design-system-v2.bak.css  design-system-v3.bak.css  design-system.css  developer.html  dicom.html  docs.html  download.html  dpa.html  drop.html  get.html  government.html  healthcare.html  hndl.html  humans.txt  index.html  (+65 more)
monitoring/: prometheus.yml
outlook-addin/: README.md  manifest.xml
poc/: README.md  paramant_poc.py
relay/: Dockerfile  README.md  envelope.js  ghost-pipe-relay.js  package-lock.json  package.json  parasign.js  relay-core.js  relay-finance.js  relay-health.js  relay-iot.js  relay-legal.js  relay-sector.js  relay.js
scripts/: README.md  check-cache-bust.sh  check-commit-style.sh  check-csp-inline.sh  code-transparency-manifest.mjs  deploy.sh  dev-local-proxy.js  dev-local.sh  fix-nginx-ports.py  m5b-soak-setup.md  paramant-admin.py  paramant-backup.sh  paramant-benchmark.py  paramant-boot-choice.sh  paramant-completion.bash  paramant-cra.sh  paramant-cron.sh  paramant-crypto-audit.sh  paramant-dashboard.sh  paramant-data-ctl.sh  paramant-doctor.sh  paramant-export.sh  paramant-firmware.sh  paramant-help  paramant-help.sh  paramant-hybrid-check.sh  paramant-info.sh  paramant-install.sh  paramant-installer.py  paramant-ip.sh  paramant-key-add.sh  paramant-key-revoke.sh  paramant-keys.sh  paramant-legal.sh  paramant-license.sh  paramant-logs.sh  paramant-migrate.sh  paramant-notary.sh  paramant-payslip.sh  paramant-ports.sh  (+31 more)
sdk-js/: CHANGELOG.md  README.md  index.d.ts  index.js  package-lock.json  package.json
sdk-py/: CHANGELOG.md  README.md  paramant_ghostpipe.py  paramant_sdk.py  pyproject.toml  requirements.txt
sdk-py/paramant/: __init__.py  capabilities.py  crypto.py
sdk-py/paramant_sdk/: __init__.py
sdk-py/tests/: test_sdk_integration.py
tests/: README.md  auth-smoke.sh  code-manifest.test.mjs  cosign-appearance-contract.test.mjs  cosign-document-delivery.test.mjs  developer-parasign-dashboard.test.mjs  e2e-auth-flow.sh  navigation-shell.test.mjs  paraid-registry.test.mjs  parasign-key-issuance.test.mjs  parasign-multi-verify.test.mjs  parasign-open-api.test.mjs  pdf-ops.test.mjs  receive-filename.test.mjs  sign-full.test.mjs  sign-invite-delivery.test.mjs  static-sanity.sh  test_paramant_admin_paths.py  ui-truthfulness.test.mjs  usage-purpose.test.mjs  user-dashboard-documents.test.mjs  vault-filename.test.mjs
thunderbird-filelink/: LICENSE  README.md  background.js  manifest.json
tooling/: README.md
windstil/: deploy.sh  index.html  package-lock.json  package.json
(+344 files in other folders)
