[package]
name = "paramant-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
ml-kem = { version = "0.3.0-rc.2", features = ["getrandom"] }
p256 = { version = "0.13", features = ["ecdh"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
# rand_core v0.6 — needed by p256's EphemeralSecret::random
rand_core = { version = "0.6", features = ["getrandom"] }
# getrandom v0.2 with js feature so the v0.6 stack resolves randomness in WASM
getrandom = { version = "0.2", features = ["js"] }
# getrandom v0.4 — needed by ml-kem's internal encapsulate() via SysRng; wasm_js enables WASM entropy
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
zeroize = "1"

[profile.release]
opt-level = "s"
lto = true
