[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paramant-sdk"
version = "2.4.6"
description = "Python SDK for PARAMANT Ghost Pipe — zero-plaintext post-quantum file transport"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.9"
keywords = ["paramant", "ghost-pipe", "encryption", "post-quantum", "file-transfer", "zero-knowledge"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications :: File Sharing",
]
dependencies = [
    "requests>=2.28",
    "cryptography>=41",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "responses>=0.24",
]

[project.urls]
Homepage = "https://paramant.app"
Documentation = "https://docs.paramant.app"
Repository = "https://github.com/Apolloccrypt/paramant-relay"
Changelog = "https://github.com/Apolloccrypt/paramant-relay/releases"
"Bug Tracker" = "https://github.com/Apolloccrypt/paramant-relay/issues"

[project.scripts]
paramant-sdk = "paramant_sdk:_cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paramant_sdk*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
